enable both expand & collapse for issues sections

--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,8 @@ time, mark, audio, video {
     --table-blue: #0f233f3e;
     --blue-text: #0a182b;
     --link-blue: #04449e;
-    --blue-text-svg-filter: invert(86%) sepia(15%) saturate(477%) hue-rotate(159deg) brightness(97%) contrast(96%);
+    --light-blue-svg-filter: invert(86%) sepia(15%) saturate(477%) hue-rotate(159deg) brightness(97%) contrast(96%);
+    --dark-blue-svg-filter: invert(7%) sepia(51%) saturate(1228%) hue-rotate(182deg) brightness(93%) contrast(97%);
     --selected-orange: #ef833b;
     --hover-orange: #fbb98d;
     --link-orange: #a54301;
@@ -282,7 +283,7 @@ nav {
     cursor: pointer;
     margin-top: -5px;
     height: calc(0.4*var(--header-height));
-    filter: var(--blue-text-svg-filter);
+    filter: var(--light-blue-svg-filter);
 }
 
 .social-links {
@@ -412,6 +413,15 @@ p {
     margin: calc(0.2*var(--rvv)) 0;
     text-align: right;
     font-size: calc(0.8*var(--rvv));
+}
+
+.collapse {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.collapse-icon {
+    filter: var(--dark-blue-svg-filter);
 }
 
 .involved-intro {
